manifests/gitpod/012_NetworkPolicy_workspace-default.yaml
---
# networking.k8s.io/v1/NetworkPolicy workspace-default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    app: gitpod
    component: workspace
  name: workspace-default
  namespace: gitpod
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
    - to:
        - podSelector:
            matchLabels:
              app: gitpod
              component: proxy
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
      to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: coredns
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gitpod
              component: proxy
    - from:
        - podSelector:
            matchLabels:
              app: gitpod
              component: ws-proxy
    - from:
        - podSelector:
            matchLabels:
              app: gitpod
              component: agent-smith
    - from:
        - podSelector:
            matchLabels:
              app: gitpod
              component: ws-daemon
    - from:
        - namespaceSelector:
            matchLabels:
              chart: monitoring
          podSelector:
            matchLabels:
              app: gitpod
              component: server
      ports:
        - port: 23000
          protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: workspace
      gitpod.io/networkpolicy: default
  policyTypes:
    - Ingress
    - Egress
